--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -1,6 +1,6 @@
 .common-header-background{
-	background-color: #919191;
-	height: 3rem;
+	background-color: $color-font2;
+	height: 3.2rem;
 	width: 100%;
 	border-radius: 0 !important;
 	.header-back{
