--- a/resources/sass/views/phone/_login.scss
+++ b/resources/sass/views/phone/_login.scss
@@ -1,9 +1,6 @@
 .google-parent-container{
 	width: 100%;
 	.google-btn-container{
-		width: 80%;
-		background-color : #919191;
-		height: 3rem;
 		.login-via-google-image{
 			background-size: 100% 100%;
 	  		height: 2rem;
@@ -11,9 +8,8 @@
 	  		margin-left: 5%;
 		}
 		.login-via-google-label{
-			font-size: 1rem;
-	  		font-family: "MyMaidBold";
-	  		margin: 0 1rem;
+	  		margin-bottom: 2.25rem;
+	  		@include text('label-light-font2-32','single');
 		}
 	}
 }
