--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -17,4 +17,9 @@
 		width: 0.75rem;
 		margin-left: 0.2rem;
 	}
+	.leftHeaderImageCls{
+		background-size: contain;
+	    height: 2rem;
+	    width: 2rem;
+	}
 }
