--- a/resources/sass/common/_text.scss
+++ b/resources/sass/common/_text.scss
@@ -62,9 +62,11 @@ $font-data: (
     ('label-light-white-32',TheOpenDoorLight,1.8rem,$color-font3),
     ('label-light-font-32',TheOpenDoorLight,2rem,$color-font1),
     ('label-regular-font-24',TheOpenDoorRegular,1.33rem,$color-font1),
+    ('label-regular-font3-24',TheOpenDoorRegular,1.33rem,$color-font3),
     ('label-regular-font2-16',TheOpenDoorRegular,1rem,$color-font2),
     ('label-regular-font3-16',TheOpenDoorRegular,1rem,$color-font3),
     ('label-regular-font-16',TheOpenDoorRegular,1rem,$color-font1),
+    ('label-regular-font5-16',TheOpenDoorRegular,1rem,$color-font5),
     ('label-regular-font-12',TheOpenDoorRegular,0.75rem,$color-font4)
     
 );
