--- a/resources/sass/views/phone/_dashboard.scss
+++ b/resources/sass/views/phone/_dashboard.scss
@@ -33,11 +33,13 @@
 				background-size: contain;
 			    height: 2rem;
 			    width: 2.5rem;
+			    margin-top: 0.25rem; 
 			}
 			.email-icon{
 				background-size: contain;
 			    height: 2rem;
 			    width: 2.5rem;
+			    margin-top: 0.25rem;
 			}
 			.number-icon{
 				background-size: contain;
