--- a/resources/sass/views/phone/_datetime.scss
+++ b/resources/sass/views/phone/_datetime.scss
@@ -18,6 +18,7 @@
 				background-size: contain;
 			    height: 2rem;
 			    width: 2.5rem;
+			    margin-top: 0.2rem;
 			}
 			.datePickerTextFieldCls{
 				height: 2.2rem;
@@ -46,6 +47,7 @@
 				background-size: contain;
 			    height: 2rem;
 			    width: 2.5rem;
+		        margin-top: 0.2rem;
 			}
 			.timePickerTextFieldCls{
 				height: 2.2rem;
