--- a/resources/sass/views/phone/_main.scss
+++ b/resources/sass/views/phone/_main.scss
@@ -8,8 +8,11 @@
 	//height: 4rem;
 	position: absolute;
   	z-index: 2;
-  	margin: 6px 40%;
+  	margin: 10px 39%;
   	background-size: 80px 80px !important;
     height: 5rem;
     width: 5rem;
+}
+.carousel-images{
+	background-size: 100% 100%;
 }
